# synthetic-data-generator

./: .gitattributes  .gitignore  .python-version  README.md  app.py  demo.py  pyproject.toml  requirements.txt
examples/: argilla_deployment.py  enforce_mapgie_template copy.py  ollama_local.py  openai_local.py
src/distilabel_dataset_generator/: __init__.py  _tabbedinterface.py  app.py  constants.py  faq.py  sft.py  utils.py
src/distilabel_dataset_generator/apps/: base.py  eval.py  faq.py  sft.py  textcat.py
src/distilabel_dataset_generator/pipelines/: base.py  embeddings.py  eval.py  sft.py  textcat.py
src/synthetic_dataset_generator/: __init__.py  __main__.py  _distiset.py  _inference_endpoints.py  _tabbedinterface.py  app.py  constants.py  utils.py
src/synthetic_dataset_generator/apps/: about.py  base.py  chat.py  eval.py  faq.py  readme.py  sft.py  textcat.py
src/synthetic_dataset_generator/pipelines/: base.py  chat.py  embeddings.py  eval.py  sft.py  textcat.py
