[project]
name = "distilabel-dataset-generator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "davidberenstein1957", email = "david.m.berenstein@gmail.com"},
]
dependencies = [
    "distilabel[hf-inference-endpoints]>=1.3.2",
    "gradio",
    "transformers>=4.44.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "apache 2"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
